--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@
 
 <body>
   <header class="header">
+    <div class="overlay"></div>
     <nav class="flex flex-jc-sb flex-ai-c">
       <a href="/" class="header__logo">
         <img src="/images/logo.svg" alt="Easybank Logo">
       </a>
-      <a href="#" class="header__menu hide-for-desktop">
+      <a id="btnHamburger" href="#" class="header__menu hide-for-desktop">
         <span></span>
         <span></span>
         <span></span>
@@ -46,18 +47,8 @@
     </nav>
   </header>
 
-  <!--
 
-
-
-
-
-
-
-
-
-
-  Next generation digital banking
+ Next generation digital banking
 
   Take your financial life online. Your Easybank account will be a one-stop-shop
   for spending, saving, budgeting, investing, and much more.
@@ -123,12 +114,12 @@
   Request Invite
 
   © Easybank. All Rights Reserved
--->
+
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div>
-  <script src="/app/js/script.js"></script>
+  <script src="/app/js/script.js" async defer></script>
 </body>
 
 </html>
