--- a/index.html
+++ b/index.html
@@ -28,12 +28,14 @@
 
 <body>
   <header class="header">
-    <div class="overlay"></div>
-    <nav class="flex flex-jc-sb flex-ai-c">
+    <div class="overlay has-fade"></div>
+
+    <nav class=" container container--pall flex flex-jc-sb flex-ai-c">
       <a href="/" class="header__logo">
         <img src="/images/logo.svg" alt="Easybank Logo">
       </a>
-      <a id="btnHamburger" href="#" class="header__menu hide-for-desktop">
+
+      <a id="btnHamburger" href="#" class="header__toggle hide-for-desktop">
         <span></span>
         <span></span>
         <span></span>
@@ -45,17 +47,23 @@
 
       <button type="button" class="hide-for-mobile">Request Invite</button>
     </nav>
+
+    <div class="header__menu has-fade ">
+      <a href="#">Home</a><a href="#">About</a><a href="#">Contact</a><a href="#">Blog</a><a href="#">Careers</a>
+    </div>
   </header>
 
-
- Next generation digital banking
-
-  Take your financial life online. Your Easybank account will be a one-stop-shop
-  for spending, saving, budgeting, investing, and much more.
-
-  Request Invite
-
-
+  <section class="hero">
+    <div class="container">
+      <div class="hero__image"> </div>
+      <div class="hero__text container--pall">
+        <h1>Next generation digital banking</h1>
+        <p> Take your financial life online. Your Easybank account will be a one-stop-shop
+          for spending, saving, budgeting, investing, and much more.</p>
+        <button type="button">Request Invite</button>
+      </div>
+    </div>
+  </section>
 
   Why choose Easybank?
 
