--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 </head>
 
 <body>
+  <!-- Header Section-->
   <header class="header">
     <div class="overlay has-fade"></div>
 
@@ -53,6 +54,7 @@
     </div>
   </header>
 
+  <!-- Hero Section -->
   <section class="hero">
     <div class="container">
       <div class="hero__image"> </div>
@@ -65,36 +67,78 @@
     </div>
   </section>
 
-  Why choose Easybank?
+  <!-- Features Section -->
+  <section class="features">
 
-  We leverage Open Banking to turn your bank account into your financial hub. Control
-  your finances like never before.
+    <div class="feature__content container container--pall">
 
-  Online Banking
-  Our modern web and mobile applications allow you to keep track of your finances
-  wherever you are in the world.
+      <div class="feature__intro">
+        <h2>Why choose Easybank?</h2>
+        <p>We leverage Open Banking to turn your bank account into your financial hub. Control
+          your finances like never before.</p>
+      </div>
 
-  Simple Budgeting
-  See exactly where your money goes each month. Receive notifications when you’re
-  close to hitting your limits.
+      <div class="feature__grid ">
+        <!-- Item 1 -->
+        <div class="feature__item ">
+          <div class="feature__icon">
+            <img src="/images/icon-online.svg" alt="Online Banking Icon">
+          </div>
+          <div class="feature__title">
+            Online Banking
+          </div>
+          <div class="feature__description">
+            Our modern web and mobile applications allow you to keep track of your finances wherever you are in the
+            world.
+          </div>
+        </div>
 
-  Fast Onboarding
-  We don’t do branches. Open your account in minutes online and start taking control
-  of your finances right away.
+        <!-- Item 2 -->
+        <div class="feature__item ">
+          <div class="feature__icon">
+            <img src="/images/icon-budgeting.svg" alt="Online Banking Icon">
+          </div>
+          <div class="feature__title">
+            Simple Budgeting
+          </div>
+          <div class="feature__description">
+            See exactly where your money goes each month. Receive notifications when you’re close to hitting your
+            limits.
+          </div>
+        </div>
 
-  Open API
-  Manage your savings, investments, pension, and much more from one account. Tracking
-  your money has never been easier.
+        <!-- Item 3 -->
+        <div class="feature__item  ">
+          <div class="feature__icon">
+            <img src="/images/icon-onboarding.svg" alt="Online Banking Icon">
+          </div>
+          <div class="feature__title">
+            Fast Onboarding
+          </div>
+          <div class="feature__description">
+            We don’t do branches. Open your account in minutes online and start taking control of your finances right
+            away.
+          </div>
+        </div>
 
+        <!-- Item 4 -->
+        <div class="feature__item ">
+          <div class="feature__icon">
+            <img src="/images/icon-api.svg" alt="Online Banking Icon">
+          </div>
+          <div class="feature__title">
+            Open API
+          </div>
+          <div class="feature__description">
+            Manage your savings, investments, pension, and much more from one account. Tracking your money has never
+            been easier.
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
-
-  Latest Articles
-
-  By Claire Robinson
-  Receive money in any currency with no fees
-  The world is getting smaller and we’re becoming more mobile. So why should you be
-  forced to only receive money in a single …
-
+ 
   By Wilson Hutton
   Treat yourself without worrying about money
   Our simple budgeting feature allows you to separate out your spending and set
