--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- Google Fonts link -->
   <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;700&display=swap" rel="stylesheet">
   <!-- Style Sheets -->
-  <link rel="stylesheet" href="/app/scss/css/style.css" type="text/css">
+  <link rel="stylesheet" href="/app/scss/style.css" type="text/css">
   <!-- Feel free to remove these styles or customize in your own stylesheet 👍 -->
   <style>
     .attribution {
