--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- Google Fonts link -->
   <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;700&display=swap" rel="stylesheet">
   <!-- Style Sheets -->
-  <link rel="stylesheet" href="/app/scss/style.css" type="text/css">
+  <link rel="stylesheet" href="./app/css/style.css" type="text/css">
   <!-- Feel free to remove these styles or customize in your own stylesheet 👍 -->
   <style>
     .attribution {
@@ -34,7 +34,7 @@
 
     <nav class="container container--py container--plr flex flex-jc-sb flex-ai-c">
       <a href="/" class="header__logo">
-        <img src="/images/logo.svg" alt="Easybank Logo">
+        <img src="./images/logo.svg" alt="Easybank Logo">
       </a>
 
       <a id="btnHamburger" href="#" class="header__toggle hide-for-desktop">
@@ -83,7 +83,7 @@
         <!-- Item 1 -->
         <div class="feature__item ">
           <div class="feature__icon">
-            <img src="/images/icon-online.svg" alt="Online Banking Icon">
+            <img src="./images/icon-online.svg" alt="Online Banking Icon">
           </div>
           <div class="feature__title">
             Online Banking
@@ -97,7 +97,7 @@
         <!-- Item 2 -->
         <div class="feature__item ">
           <div class="feature__icon">
-            <img src="/images/icon-budgeting.svg" alt="Online Banking Icon">
+            <img src="./images/icon-budgeting.svg" alt="Online Banking Icon">
           </div>
           <div class="feature__title">
             Simple Budgeting
@@ -111,7 +111,7 @@
         <!-- Item 3 -->
         <div class="feature__item  ">
           <div class="feature__icon">
-            <img src="/images/icon-onboarding.svg" alt="Online Banking Icon">
+            <img src="./images/icon-onboarding.svg" alt="Online Banking Icon">
           </div>
           <div class="feature__title">
             Fast Onboarding
@@ -125,7 +125,7 @@
         <!-- Item 4 -->
         <div class="feature__item ">
           <div class="feature__icon">
-            <img src="/images/icon-api.svg" alt="Online Banking Icon">
+            <img src="./images/icon-api.svg" alt="Online Banking Icon">
           </div>
           <div class="feature__title">
             Open API
@@ -147,7 +147,7 @@
       <div class="article__grid">
         <!-- Item 1 -->
         <a href="#" class="article__item">
-          <div class="article__image" style="background-image: url(/images/image-currency.jpg);"> </div>
+          <div class="article__image" style="background-image: url(./images/image-currency.jpg);"> </div>
           <div class="article__text">
             <div class="article__author">By Claire Robinson</div>
             <div class="article__title">Receive money in any currency with no fees</div>
@@ -158,7 +158,7 @@
 
         <!-- Item 2 -->
         <a href="#" class="article__item">
-          <div class="article__image" style="background-image: url(/images/image-restaurant.jpg);"> </div>
+          <div class="article__image" style="background-image: url(./images/image-restaurant.jpg);"> </div>
           <div class="article__text">
             <div class="article__author">By Wilson Hutton</div>
             <div class="article__title">Treat yourself without worrying about money</div>
@@ -169,7 +169,7 @@
 
         <!-- Item 3 -->
         <a href="#" class="article__item">
-          <div class="article__image" style="background-image: url(/images/image-plane.jpg);"> </div>
+          <div class="article__image" style="background-image: url(./images/image-plane.jpg);"> </div>
           <div class="article__text">
             <div class="article__author"> By Wilson Hutton</div>
             <div class="article__title">Take your Easybank card wherever you go</div>
@@ -180,7 +180,7 @@
 
         <!-- Item 4 -->
         <a href="#" class="article__item">
-          <div class="article__image" style="background-image: url(/images/image-confetti.jpg);"> </div>
+          <div class="article__image" style="background-image: url(./images/image-confetti.jpg);"> </div>
           <div class="article__text">
             <div class="article__author">By Claire Robinson</div>
             <div class="article__title">Our invite-only Beta accounts are now live!</div>
